--- a/TheGames/TheGames.vcxproj.filters
+++ b/TheGames/TheGames.vcxproj.filters
@@ -53,5 +53,8 @@
     <ClCompile Include="GameLevel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GameObject.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
