--- a/TheGames/TheGames.vcxproj
+++ b/TheGames/TheGames.vcxproj
@@ -19,7 +19,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v110</PlatformToolset>
+    <PlatformToolset>v120</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -41,8 +41,8 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>\\ueahome4\stusci5\ypf12pxu\data\Documents\graphics\include;$(IncludePath)</IncludePath>
-    <LibraryPath>\\ueahome4\stusci5\ypf12pxu\data\Documents\graphics\lib-vc2012;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\adam\Desktop\platformerstuff\include;\\ueahome4\stusci5\ypf12pxu\data\Documents\graphics\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\adam\Desktop\platformerstuff\libs;\\ueahome4\stusci5\ypf12pxu\data\Documents\graphics\lib-vc2012;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
