Added text and fonts

--- a/TheGames/TheGames.vcxproj.filters
+++ b/TheGames/TheGames.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="BasicEnemy.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FreeType.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -66,6 +69,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="BasicEnemy.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FreeType.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
